# sensor_proto

./: .gitignore  AGENTS.md  Makefile  README.md  TODO.md  pyproject.toml
configs/: hikrobot-2cam.json  hikrobot-stream.json  hw-session.example.json  mock-8cam-sync-stress.json  mock-lerobot-recording.json  mock-session.json  mock-stream-zmq-benchmark.json  realsense-2cam-session.example.json  realsense-2cam-session.json  realsense-4cam-session.example.json  realsense-4cam-session.json  realsense-7cam-session-45ms.json  realsense-7cam-session-50ms.json  realsense-7cam-session.json  realsense-7cam-validation-40ms.json  realsense-7cam-validation.json  realsense-8cam-session-40ms.json  realsense-8cam-session-45ms.json  realsense-8cam-session.json  realsense-8cam-stream.json  realsense-8cam-validation-40ms.json  realsense-8cam-validation-45ms.json  realsense-8cam-validation-50ms.json  realsense-8cam-zmq-session.json  realsense-d435i-session.json
docker/: Dockerfile  compose.yaml
docs/: dual-machine-zmq-benchmark.md  multi-modal-next-steps.md  multi-modal-sync-architecture.md  ptp-multi-machine-time-sync-plan.md  real-hardware-test.md  realsense-8cam-experiment-report-2026-03-11.md  realsense-8cam-stream-service-design.md  realsense-recording-sink-design-2026-03-12.md  realsense-stream-latency-review-2026-03-11.md  realsense-stream-optimization-priority-2026-03-12.md  realsense-stream-quickstart.md  realsense-sync-architecture-evaluation.md  ros2-bridge-multi-machine-architecture.md  sensor-fusion-timing-glossary.md  sensor-storage-cost.md  zmq-transport-contract.md  (+1 more)
(+79 files in other folders)
