[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sensor-proto"
version = "0.1.0"
description = "Multi-camera stream harness for mock and hardware validation."
requires-python = ">=3.10"
dependencies = ["pyzmq>=26,<28"]

[project.optional-dependencies]
recording = ["lerobot==0.5.0; python_version >= '3.12'"]
replay = ["rerun-sdk"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
